TestFunctionPrometheusAppv3.1/testfunctionapp.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: function-<FunctionName>
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2    
spec:  
  rules:  
    - host: <AKSDnsName>
      http:
        paths:                
        - backend:
            serviceName: function-<FunctionName>-http
            servicePort: 80
          path: /<FunctionName>(/|$)(.*)
